--- a/variables.tex
+++ b/variables.tex
@@ -7,27 +7,27 @@
 %-------------------------------------------------------------------------------
 % Your thesis title - this is used in the title and abstract
 % Command: \ttitle
-\thesistitle{Thesis / Report Title}
+\thesistitle{Parallelising DIC}
 %-------------------------------------------------------------------------------
 % The document type: Thesis / report, etc.
 % Command: \doctype
-\documenttype{Undergraduate Thesis}
+\documenttype{Report}
 %-------------------------------------------------------------------------------
 % Your supervisor's name - this is used in the title page
 % Command: \supname
-\supervisor{Dr. FirstName \textsc{LastName}}
+\supervisor{Dr. Dhananjay \textsc{Kulkarni}}
 %-------------------------------------------------------------------------------
 % The supervisor's position - Used on Certificate
 % Command: \suppos
-\supervisorposition{Faculty}
+\supervisorposition{Dean}
 %-------------------------------------------------------------------------------
 % Supervisor's institute
 % Command: \supinst
-\supervisorinstitute{BITS-Pilani Pilani Campus}
+\supervisorinstitute{BITS Pilani, Goa Campus}
 %-------------------------------------------------------------------------------
 % Your Co-Supervisor's name
 % Command: \cosupname
-\cosupervisor{Dr. FirstName \textsc{SecondName}}
+\cosupervisor{Mr. Iniyan \textsc{T}}
 %-------------------------------------------------------------------------------
 % Co-Supervisor's Position - Used on Certificate
 % Command: \cosuppos
@@ -35,7 +35,7 @@
 %-------------------------------------------------------------------------------
 % Co-Supervisor's Institute
 % Command: \cosupinst
-\cosupervisorinstitute{BITS-Pilani Hyderabad Campus}
+\cosupervisorinstitute{IIT, Madras}
 %-------------------------------------------------------------------------------
 % Your Examiner's name. Not currently used anywhere.
 % Command: \examname
@@ -47,19 +47,19 @@
 %-------------------------------------------------------------------------------
 % The BITS Course Code for which this report is written
 % COmmand: \ccode
-\coursecode{BITS F421T}
+\coursecode{ME F377}
 %-------------------------------------------------------------------------------
 % The name of the Course
 % Command: \cname
-\coursename{Thesis}
+\coursename{Design Project}
 %-------------------------------------------------------------------------------
 % Your name. Extend manually in case of multiple authors
 % Command: \authornames
-\authors{YourFirstName \textsc{YourSecondName}}
+\authors{Rushikesh \textsc{Jogdand}, Name \textsc{Surname}}
 %-------------------------------------------------------------------------------
 % Your ID Number - used on the Title page and abstract
 % Command: \idnum
-\IDNumber{2012A0TS000P}
+\IDNumber{2016A4PS0147G, 201XXXXXXXXG}
 %-------------------------------------------------------------------------------
 % Your address
 % Command: \addressnames
@@ -71,7 +71,7 @@
 %-------------------------------------------------------------------------------
 % Keywords for this report.
 % Command: \keywordnames
-\keywords{}
+\keywords{Qt, DIC, Parallel Processing}
 %-------------------------------------------------------------------------------
 % University details
 % Command: \univname
@@ -93,21 +93,21 @@
 %-------------------------------------------------------------------------------
 % Campus Name, in capitals
 % Command: \CAMPUSNAME
-\CAMPUS{PILANI CAMPUS}
+\CAMPUS{GOA CAMPUS}
 
 
 %-------------------------------------------------------------------------------
 % Department Details
 % Command: \deptname
-\department{\texorpdfstring{\href{http://www.bits-pilani.ac.in/pilani/computerscience/ComputerScience} % Your department's URL
-                {Computer Science \& Information Systems}} % Your department's name
-                {Computer Science}}
+\department{\texorpdfstring{\href{http://universe.bits-pilani.ac.in/goa/me/home} % Your department's URL
+                {Mechanical Engineering}} % Your department's name
+                {Mechanical Engineering}}
 %-------------------------------------------------------------------------------
 % Department details, in Capitals
 % Command: \DEPTNAME
-\DEPARTMENT{\texorpdfstring{\href{http://www.bits-pilani.ac.in/pilani/computerscience/ComputerScience} % Your department's URL
-                {COMPUTER SCIENCE \& INFORMATION SYSTEMS}} % Your department's name in capitals
-                {COMPUTER SCIENCE \& INFORMATION SYSTEMS}}
+\DEPARTMENT{\texorpdfstring{\href{http://universe.bits-pilani.ac.in/goa/me/home} % Your department's URL
+                {MECHANICAL ENGINEERING}} % Your department's name in capitals
+                {MECHANICAL ENGINEERING}}
 %-------------------------------------------------------------------------------
 % Research Group Details
 % Command: \groupname
